<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Username"
            android:text="@string/enter_your_username"
            android:textSize="24sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="190dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="599dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/john_doe"
            android:ems="10"
            android:id="@+id/textusername"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/Username"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="182dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="528dp"/>
    <TextView
            android:text="@string/enter_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPassword"
            android:hint="@string/enter_your_password"
            android:textSize="24sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:layout_marginTop="66dp"
            app:layout_constraintTop_toBottomOf="@+id/textusername"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="334dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="440dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.461"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/textPassword2"
            android:hint="@string/password"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="176dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="354dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:layout_marginTop="81dp"
            app:layout_constraintTop_toBottomOf="@+id/textPassword2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="148dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="222dp" android:layout_marginEnd="175dp"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>